# nrf5x-dfu-bootloader

./: CMakeLists.txt  README.md  app_timer.h  bootloader.c  bootloader.sct  bootloader_util_arm.c  dfu_ble_svc.c  dfu_dual_bank.c  dfu_transport_ble.c  dfu_transport_serial.c  main.c  nrf_delay.c
app_common/: app_button.c  app_uart.c  pstorage.c
arm/: bootloader.uvproj
include/: bootloader.h  bootloader_types.h  dfu.h  dfu_types.h
startup/: arm_startup_nrf51.s
